# purelang_cli

./: Cargo.toml
src/: compile.rs  main.rs  run.rs
